# PySAG-UdeC

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  examples.rst  getting_started.rst  index.rst  installation.rst  readme.md
docs/source/api/: crossover.rst  exceptions.rst  ga.rst  initialization.rst  mutation.rst  pysag.rst  selection.rst
examples/: example_knapsack_binary.py  example_math_function_maximization.py  example_string_coincidence.py  simple_sum_problem.py
src/PySAG/: __init__.py  crossover.py  exceptions.py  ga.py  initialization.py  mutation.py  operators.py  selection.py
tests/: test_operators.py
